--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -17,7 +17,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.EmployeeController">
+<BorderPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
 
    <left>
       <VBox prefHeight="426.0" prefWidth="170.0" BorderPane.alignment="CENTER">
@@ -25,7 +25,7 @@
             <Insets bottom="2.0" left="2.0" right="2.0" />
          </padding>
          <children>
-            <Label alignment="TOP_CENTER" prefHeight="17.0" prefWidth="246.0" text="Employee Information">
+            <Label alignment="TOP_CENTER" prefHeight="17.0" prefWidth="246.0" text="Customer Information">
                <padding>
                   <Insets bottom="2.0" left="2.0" />
                </padding>
@@ -41,7 +41,6 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -71,7 +70,6 @@
                      </GridPane.margin></TextField>
                   <TextField fx:id="text_city" prefHeight="25.0" prefWidth="0.0" promptText="City" GridPane.rowIndex="5" />
                   <TextField fx:id="text_zipcode" prefHeight="25.0" prefWidth="0.0" promptText="ZIP Code" GridPane.rowIndex="6" />
-                  <TextField fx:id="text_payrate" promptText="Payrate" GridPane.rowIndex="8" />
                   <ComboBox fx:id="states_cb" prefWidth="150.0" promptText="State" GridPane.rowIndex="7" />
                </children>
                <padding>
@@ -88,17 +86,17 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                  <Button fx:id="addButton" mnemonicParsing="false" onAction="#addEmployee" prefHeight="25.0" prefWidth="62.0" text="Add">
+                  <Button fx:id="addButton" mnemonicParsing="false" onAction="#addCustomer" prefHeight="25.0" prefWidth="62.0" text="Add">
                      <GridPane.margin>
                         <Insets left="10.0" />
                      </GridPane.margin>
                   </Button>
-                  <Button fx:id="updateButton" mnemonicParsing="false" onAction="#updateEmployee" prefHeight="25.0" prefWidth="62.0" text="Update" GridPane.columnIndex="1">
+                  <Button fx:id="updateButton" mnemonicParsing="false" onAction="#updateCustomer" prefHeight="25.0" prefWidth="62.0" text="Update" GridPane.columnIndex="1">
                      <GridPane.margin>
                         <Insets left="10.0" />
                      </GridPane.margin>
                   </Button>
-                  <Button fx:id="deleteButton" mnemonicParsing="false" onAction="#deleteEmployee" prefHeight="25.0" prefWidth="62.0" text="Delete" GridPane.rowIndex="1">
+                  <Button fx:id="deleteButton" mnemonicParsing="false" onAction="#deleteCustomer" prefHeight="25.0" prefWidth="62.0" text="Delete" GridPane.rowIndex="1">
                      <GridPane.margin>
                         <Insets left="10.0" />
                      </GridPane.margin>
@@ -114,7 +112,7 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <TextField fx:id="text_search" onKeyTyped="#searchEmployee" prefHeight="25.0" prefWidth="119.0" promptText="Search...">
+                  <TextField fx:id="text_search" onKeyTyped="#search" prefHeight="25.0" prefWidth="119.0" promptText="Search...">
                      <opaqueInsets>
                         <Insets left="10.0" />
                      </opaqueInsets>
@@ -126,20 +124,6 @@
                <opaqueInsets>
                   <Insets right="20.0" />
                </opaqueInsets>
-            </GridPane>
-            <GridPane>
-              <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-              </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
-               <children>
-                  <Button fx:id="payroll_button" mnemonicParsing="false" onMouseClicked="#payrollWindow" prefHeight="30.0" prefWidth="141.0" text="Payroll" />
-               </children>
-               <padding>
-                  <Insets left="10.0" />
-               </padding>
             </GridPane>
          </children>
       </VBox>
@@ -171,20 +155,35 @@
          </left>
          <center>
             <BorderPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+               <bottom>
+                  <HBox prefHeight="182.0" prefWidth="624.0" BorderPane.alignment="CENTER">
+                     <children>
+                        <HBox prefHeight="182.0" prefWidth="624.0">
+                           <children>
+                              <Button fx:id="cars_button" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#carWindow" prefHeight="128.0" prefWidth="135.0" text="Cars" />
+                              <Button fx:id="employee_button" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#employeeWindow" prefHeight="128.0" prefWidth="135.0" text="Employees" />
+                              <Button fx:id="inventory_button" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#inventoryWindow" prefHeight="128.0" prefWidth="135.0" text="Inventory" />
+                              <Button fx:id="CarServiceOrder_btn" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onMouseClicked="#carServiceOrderWindow" prefHeight="128.0" prefWidth="135.0" text="Car Service Order" />
+                           </children>
+                           <padding>
+                              <Insets top="2.0" />
+                           </padding>
+                        </HBox>
+                     </children></HBox>
+               </bottom>
                <BorderPane.margin>
                   <Insets />
                </BorderPane.margin>
                <center>
-                  <TableView id="tableView" fx:id="employeeTableView" onMouseClicked="#clickEmployee" prefHeight="470.0" prefWidth="624.0" BorderPane.alignment="CENTER">
+                  <TableView id="tableView" fx:id="tableView" onMouseClicked="#clickCustomer" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                     <columns>
-                        <TableColumn id="firstName" fx:id="col_first" text="First Name" />
-                        <TableColumn id="lastName" fx:id="col_last" text="Last Name" />
-                        <TableColumn id="number" fx:id="col_number" prefWidth="90.0" text="Mobile No." />
-                        <TableColumn id="email" fx:id="col_email" prefWidth="100.0" text="Email Address" />
-                        <TableColumn fx:id="col_city" text="City" />
-                        <TableColumn fx:id="col_zip" prefWidth="50.0" text="ZIP" />
-                        <TableColumn fx:id="col_state" minWidth="6.0" prefWidth="50.0" text="State" />
-                        <TableColumn fx:id="col_payrate" prefWidth="93.0" text="Payrate" />
+                        <TableColumn id="firstName" fx:id="col_first" prefWidth="90.0" text="First Name" />
+                        <TableColumn id="lastName" fx:id="col_last" prefWidth="90.0" text="Last Name" />
+                        <TableColumn id="number" fx:id="col_number" prefWidth="110.0" text="Mobile No." />
+                        <TableColumn id="email" fx:id="col_email" prefWidth="123.0" text="Email Address" />
+                        <TableColumn fx:id="col_city" prefWidth="92.0" text="City" />
+                        <TableColumn fx:id="col_zip" prefWidth="66.0" text="ZIP" />
+                        <TableColumn fx:id="col_state" prefWidth="52.0" text="State" />
                     </columns>
                      <opaqueInsets>
                         <Insets />
