--- a/src/sample/Report.fxml
+++ b/src/sample/Report.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
@@ -18,7 +17,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.CarServiceOrderController">
+<BorderPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.ReportController">
 
     <left>
         <VBox prefHeight="426.0" prefWidth="170.0" BorderPane.alignment="CENTER">
@@ -26,7 +25,7 @@
                 <Insets bottom="2.0" left="2.0" right="2.0" />
             </padding>
             <children>
-                <Label alignment="TOP_CENTER" prefHeight="17.0" prefWidth="246.0" text="Car Service">
+                <Label alignment="TOP_CENTER" prefHeight="17.0" prefWidth="246.0" text="Reports">
                     <padding>
                         <Insets bottom="2.0" left="2.0" />
                     </padding>
@@ -34,72 +33,39 @@
                         <Font size="15.0" />
                     </font>
                 </Label>
-                <GridPane prefHeight="301.0" prefWidth="166.0">
+                <GridPane prefHeight="70.0" prefWidth="166.0">
                     <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="127.0" minWidth="10.0" prefWidth="127.0" />
                     </columnConstraints>
                     <rowConstraints>
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints maxHeight="96.0" minHeight="10.0" prefHeight="68.0" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="43.0" minHeight="0.0" prefHeight="36.0" vgrow="SOMETIMES" />
-                        <RowConstraints maxHeight="70.0" minHeight="10.0" prefHeight="64.0" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="70.0" minHeight="10.0" prefHeight="32.0" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="70.0" minHeight="10.0" prefHeight="32.0" vgrow="SOMETIMES" />
-                  <RowConstraints maxHeight="70.0" minHeight="10.0" prefHeight="42.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                     <children>
-                  <ComboBox fx:id="customerList" onAction="#selectCustomer" prefWidth="150.0" promptText="Customer" />
-                  <ComboBox fx:id="carList" prefWidth="150.0" promptText="Car" GridPane.rowIndex="1" />
-                  <ComboBox fx:id="carServiceList" onAction="#selectCarService" prefHeight="63.0" prefWidth="127.0" promptText="Car Service" GridPane.rowIndex="2" />
-                  <ComboBox fx:id="autopartList" prefHeight="52.0" prefWidth="127.0" promptText="Service Part" GridPane.rowIndex="4" />
-                  <ComboBox fx:id="employeeList" prefWidth="150.0" promptText="Employee" GridPane.rowIndex="3" />
-                  <TextField fx:id="text_quantity" promptText="Part Quantity" GridPane.rowIndex="5">
-                     <GridPane.margin>
-                        <Insets top="2.0" />
-                     </GridPane.margin></TextField>
-                  <DatePicker fx:id="text_date" promptText="Date" GridPane.rowIndex="7" />
-                  <TextField fx:id="text_discount" prefWidth="127.0" promptText="Discount" GridPane.rowIndex="6">
-                     <GridPane.margin>
-                        <Insets top="2.0" />
-                     </GridPane.margin>
-                  </TextField>
+                        <DatePicker fx:id="start_date" promptText="Starting Day" />
+                        <DatePicker fx:id="end_date" promptText="Ending Day" GridPane.rowIndex="1" />
                     </children>
                     <padding>
                         <Insets left="10.0" right="2.0" />
                     </padding>
                 </GridPane>
-            <TextField fx:id="text_comments" alignment="TOP_LEFT" prefHeight="33.0" prefWidth="146.0" promptText="Comments...">
-               <VBox.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="20.0" />
-               </VBox.margin>
-            </TextField>
                 <GridPane prefHeight="77.0" prefWidth="166.0">
                     <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                     </columnConstraints>
                     <rowConstraints>
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
-                    <children>
-                        <Button fx:id="addButton" mnemonicParsing="false" onAction="#addCarServiceOrder" prefHeight="25.0" prefWidth="62.0" text="Add">
-                            <GridPane.margin>
-                                <Insets left="10.0" />
-                            </GridPane.margin>
-                        </Button>
-                        <Button fx:id="updateButton" mnemonicParsing="false" onAction="#updateCarServiceOrder" prefHeight="25.0" prefWidth="62.0" text="Update" GridPane.columnIndex="1">
-                            <GridPane.margin>
-                                <Insets left="10.0" />
-                            </GridPane.margin>
-                        </Button>
-                        <Button fx:id="deleteButton" mnemonicParsing="false" onAction="#deleteCarServiceOrder" prefHeight="25.0" prefWidth="62.0" text="Delete" GridPane.rowIndex="1">
-                            <GridPane.margin>
-                                <Insets left="10.0" />
-                            </GridPane.margin>
-                        </Button>
-                    </children>
+               <children>
+                  <Button fx:id="report_button" mnemonicParsing="false" onAction="#generateReport" prefHeight="36.0" prefWidth="166.0" text="Generate Report">
+                     <GridPane.margin>
+                        <Insets />
+                     </GridPane.margin>
+                  </Button>
+               </children>
+               <padding>
+                  <Insets left="10.0" right="20.0" />
+               </padding>
                 </GridPane>
                 <GridPane>
                     <columnConstraints>
@@ -110,7 +76,7 @@
                         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                     <children>
-                        <TextField fx:id="text_search" onKeyPressed="#search" prefHeight="25.0" prefWidth="119.0" promptText="Search...">
+                        <TextField fx:id="text_search" onKeyPressed="#searchPart" prefHeight="25.0" prefWidth="119.0" promptText="Search...">
                             <opaqueInsets>
                                 <Insets left="10.0" />
                             </opaqueInsets>
@@ -157,14 +123,15 @@
                         <Insets />
                     </BorderPane.margin>
                     <center>
-                        <TableView id="tableView" fx:id="carServiceOrderTableView" onMouseClicked="#clickCarServiceOrder" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+                        <TableView id="tableView" fx:id="tableView" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                             <columns>
-                                <TableColumn fx:id="col_ordernumber" prefWidth="72.0" text="Order #" />
-                                <TableColumn id="number" fx:id="col_customer" prefWidth="161.0" text="Customer" />
-                                <TableColumn id="email" fx:id="col_car" prefWidth="90.0" text="Car" />
-                                <TableColumn fx:id="col_price" prefWidth="82.0" text="Price" />
-                        <TableColumn fx:id="col_date" prefWidth="75.0" text="Date" />
-                        <TableColumn fx:id="col_comments" prefWidth="143.0" text="Comments" />
+                                <TableColumn id="number" fx:id="col_start" prefWidth="71.0" text="Start Date" />
+                                <TableColumn id="email" fx:id="col_end" prefWidth="68.0" text="End Date" />
+                        <TableColumn fx:id="col_costs" prefWidth="93.0" text="Cost of Goods" />
+                        <TableColumn fx:id="col_service_profit" prefWidth="94.0" text="Service Profit" />
+                        <TableColumn fx:id="col_taxes" prefWidth="54.0" text="Taxes" />
+                        <TableColumn fx:id="col_profit" prefWidth="112.0" text="Before Tax Profit" />
+                        <TableColumn fx:id="col_net_profit" prefWidth="130.0" text="After Tax Profit" />
                             </columns>
                             <opaqueInsets>
                                 <Insets />
